Fixed Header Component on Mobile

--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -1,43 +1,3 @@
-div#header {
-    color: white;
-    height: 70px;
-    background-color: darkblue;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    box-shadow: 0px 0px 9px 3px rgba(41, 41, 41, .25);
-    z-index: 100;
-}
-
-div#header-margin {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-h1#heading {
-    height: 70px;
-    margin-left: 40px;
-}
-
-h1#heading:hover {
-    cursor: pointer;
-    line-height: 70px;
-    margin-left: 40px;
-}
-
-p#greeting {
-    line-height: 70px;
-    margin-right: 20px;
-}
-
-div#authentication-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70px;
-    margin-right: 40px;
-}
-
 div#router-container {
     position: relative;
     top: 70px;
